--- a/index.html
+++ b/index.html
@@ -195,9 +195,12 @@ http://www.tooplate.com/view/2098-health
                                             
                               
 
-                      <div class="col-md-4 col-sm-6">
-                         <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
-                                   <div class="team-info">
+                   ‹div
+class="col-md-4 col-sm-6">
+‹div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.2s">
+<img
+sIc="images/card2.jpg" class="img-responsive" alt="team">
+‹div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
                                       <div class="team-contact-info">
