--- a/index.html
+++ b/index.html
@@ -176,35 +176,33 @@ http://www.tooplate.com/view/2098-health
                     </div>
 
                     <div class="clearfix"></div>
-
                    <div class="col-lg-4 col-md-6 col-sm-12 card-item">
                          <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
-                             <img src="images/card2.jpg" class="img-responsive" alt="team">
-
-
+                             <img src="images/card1.jpg" class="img-responsive" alt="team">
                                    <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
                                         <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە سڵاو ریزمان هیە بۆی، ماتۆر سوارە</p>
+                                          <div class="team-contact-info">
+                                             <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
+                                        </div>
                                         <ul class="social-icon">
-                <li><a href="#" class="fa fa-snapchat"></a></li>
-                <li><a href="#" class="fa fa-whatsapp"></a></li>
-                <li><a href="#" class="fa fa-envelope-o"></a></li>
-            </ul>
-        </div>
-    </div>
-</div
+                                             <li><a href="#" class="fa fa-snapchat"</a></li>
+                                             <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                        </ul>
+                                   </div>
+
+                         </div>
+                    </div>  
                                             
                               
   <div class="clearfix"></div>
                 <div class="col-lg-4 col-md-6 col-sm-12 card-item">
                          <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
                              <img src="images/card2.jpg" class="img-responsive" alt="team">
-
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
                                       <div class="team-contact-info">
-
                                              <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
                                         </div>
                                         <ul class="social-icon">
@@ -225,14 +223,17 @@ http://www.tooplate.com/view/2098-health
                                    <div class="team-info">
                                         <h3>وەلید ئەوائیل</h3>
                                         <p>ئەە گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە، گەنجێکی ناسراوە لەداخیلی رێزمان هەیە بۆی</p>
+                                         <div class="team-contact-info">
+                                             <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
+                                        </div>
                                         <ul class="social-icon">
-                <li><a href="#" class="fa fa-snapchat"></a></li>
-                <li><a href="#" class="fa fa-whatsapp"></a></li>
-                <li><a href="#" class="fa fa-envelope-o"></a></li>
-            </ul>
-        </div>
-    </div>
-</div
+                                             <li><a href="#" class="fa fa-snapchat"</a></li>
+                                             <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                        </ul>
+                                   </div>
+
+                         </div>
+                    </div>  
 
 
      <!-- NEWS -->
