--- a/index.html
+++ b/index.html
@@ -231,6 +231,25 @@ http://www.tooplate.com/view/2098-health
                                    </div>
                          </div>
                     </div>  
+                    
+                    
+                     <div class="clearfix"></div>
+                <div class="col-lg-4 col-md-6 col-sm-12 card-item">
+                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
+                             <img src="images/card3.jpg" class="img-responsive" alt="team">
+                                   <div class="team-info">
+                                        <h3>  وەلیدی ئەوائیل</h3>
+                                          <p> ئەم گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە، گەنجێکی ناسراوە لەداخیلی رێزمان هەیە بۆی </p>
+                                      <div class="team-contact-info">
+                                             <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
+                                        </div>
+                                        <ul class="social-icon">
+                                             <li><a href="#" class="fa fa-snapchat"</a></li>
+                                             <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                        </ul>
+                                   </div>
+                         </div>
+                    </div>  
 
 
      <!-- NEWS -->
